Resolves #20 500 error when ddp client user login has no memberOf array - also fixed some footer styling that made the footer invisible.

--- a/client/footer.css
+++ b/client/footer.css
@@ -1,6 +1,11 @@
-[data-role="footer"] {
+.ui-footer {
     background: #004b87 url(../images/header_bg.png) 50% top no-repeat !important;
+    height: 50px;
 }
-[data-role="footer"] .ui-block-b {
+.ui-footer .ui-block-b {
     padding-right: 1%;
+}
+
+.ui-footer .pagination {
+    margin: 0px;
 }
